tests/functional/data/transpiler/common/errors/loops/bad_structure2.err
bad_structure2.cpp:1:1: error: Incorrect [@outer]/[@inner] loops structure
    1 | @kernel void hello_kern() {
      | ^
